--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+/temp/
+
 # Compiled class file
 *.class
+*/bin
+/target/
 
 # Log file
 *.log
@@ -21,3 +25,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+replay_pid*
+
+# Maven
+/.mvn/
+
+# IDEA
+.idea
+*.iml
+.idea_modules
+
+#GIT
+.gitreview
